# scryfall-mcp

./: .gitignore  .mcp.json  .textlintrc  AGENT.md  CLAUDE.md  LICENSE  README.md  TEST_RESULTS.md  package.json  pyproject.toml  run_mcp_inspector.sh  run_server.sh  test_args.json  test_mcp_call.py
.claude/agents/: markdown-proofreader.md  python-code-reviewer.md  python-test-debugger.md
.claude/rules/: coding.md  documentation.md  python.md
.claude/skills/commit/: SKILL.md
.claude/skills/mcp-smoke/: SKILL.md
.claude/skills/qa/: SKILL.md
.claude/skills/test/: SKILL.md
.github/workflows/: test.yml
deploy/aws/: lambda_handler.py  package.json  serverless.yml
docs/: API-REFERENCE.md  AUTHENTICATION.md  CARD-DISPLAY-SPEC.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  INTERNATIONALIZATION.md  MCP-OUTPUT-DESIGN-REPORT.md  MCP-TESTING.MD  MCP-TESTING.md  REFACTORING_RECOMMENDATIONS.md  REMOTE-MCP-IMPLEMENTATION-PLAN.md  TESTING-GUIDE.md
scripts/: manage_secrets.py  mcp_test.py  run_tests.sh
src/scryfall_mcp/: __init__.py  __main__.py  models.py  server.py  settings.py  setup_wizard.py
src/scryfall_mcp/api/: client.py  exceptions.py  models.py  rate_limit_backend.py  rate_limiter.py  sets.py
src/scryfall_mcp/auth/: __init__.py  email.py  middleware.py  oauth.py
src/scryfall_mcp/cache/: __init__.py  backends.py  manager.py  models.py
src/scryfall_mcp/errors/: __init__.py  handlers.py
src/scryfall_mcp/i18n/: __init__.py  constants.py  locales.py  models.py
src/scryfall_mcp/i18n/mappings/: common.py  en.py  ja.py
src/scryfall_mcp/resources/: __init__.py  setup_guide.ja
src/scryfall_mcp/search/: ability_patterns.py  builder.py  models.py  parser.py  presenter.py  processor.py
src/scryfall_mcp/tools/: configure.py  search.py  sets.py
tests/: conftest.py  test_design_review_fixes.py  test_main.py  test_server.py  test_settings.py  test_settings_validators.py  test_setup_wizard.py
tests/api/: test_client.py  test_models.py  test_rate_limiter.py  test_rate_limiter_manager.py
tests/auth/: test_email_auth.py  test_email_middleware.py  test_jwt_middleware.py  test_jwt_middleware_integration.py  test_oauth_flow.py
tests/cache/: __init__.py  test_backends.py  test_manager.py
tests/errors/: __init__.py  test_handlers.py
tests/i18n/: test_locales.py  test_mappings.py
tests/integration/: README.md  __init__.py  test_configuration_workflow.py  test_e2e_query_pipeline.py  test_latest_set_integration.py  test_mcp_connection.py  test_mcp_content_validation.py  test_mcp_tool_call.py  test_mcp_tools.py  test_mcp_tools_list.py
tests/search/: test_ability_patterns.py  test_builder.py  test_presenter.py  test_processor.py
tests/tools/: test_configure.py  test_search.py  test_sets.py
